@@ -43,6 +43,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #10163: Skip unreadable registry keys during mimetypes
+  initialization.
+
 - logging: Made StreamHandler terminator configurable.
 
 - logging: Allowed filters to be just callables.
